--- a/docs/content/1.introduction/2.templates.md
+++ b/docs/content/1.introduction/2.templates.md
@@ -1,11 +1,4 @@
----
-title: Templates
-description: ''
-position: 20
-category: API Reference
----
-
-## What is a template
+# Templates
 
 Templates are designed to group validations for fields.
 
@@ -16,15 +9,16 @@ the needed checks for the `username` and `password` fields.
 Using templates allows you to check a whole form in just one line.
 Simply regroup your forms data in an object to match the template structure, and run `signin.check(formObj)`.
 
+
 ## Define a template
 
-<alert type="info">
-    A good practice is to create a new directory to store all your validation templates.
-</alert>
+::alert{type="info"}
+  A good practice is to create a new directory/repository to store all your validation templates. [Learn why.](/introduction/share-templates)
+::
 
 Here we use `~/validations/`.
 
-```js[~/validations/auth.js]
+```typescript [~/validations/auth.ts]
 import { templateify, required, minLength, maxLength } from 'vuito';
 
 export const signin = templateify({
@@ -42,7 +36,7 @@ export const signin = templateify({
 
 ## Use a template
 
-```js[~/app.js]
+```typescript [~/app.ts]
 import { signin } from '~/validations/auth.js';
 
 const formData = {
@@ -51,6 +45,6 @@ const formData = {
 };
 
 signin.check(formData)
-    .then(() => alert("You're good bro!"))
-    .catch((err) => alert(`Nah, ${err}`));
+    .then(() => console.info("You're good bro!"))
+    .catch((err) => console.error(`Nah, ${err}`));
 ```
