--- a/docs/content/1.introduction/3.vue-mixin.md
+++ b/docs/content/1.introduction/3.vue-mixin.md
@@ -1,36 +1,31 @@
----
-title: Vue
-description: ''
-position: 30
-category: Integrations
----
+# Vue Mixin
+
+:badge[Currently deprecated, Vue 2 only]{type="warning"}
 
 Use vuito with Vue.js or Nuxt.js like a breeze!
 
 ## Installation
 
-<code-group>
-  <code-block label="NPM" active>
-
-  ```bash
-  npm install @vuito/vue
-  ```
-
-  </code-block>
-  <code-block label="Yarn">
-
-  ```bash
-  yarn add @vuito/vue
-  ```
-
-  </code-block>
-</code-group>
+  ::code-group
+    ```bash [NPM]
+    npm i @vuito/vue
+    ```
+    ```bash [Bun]
+    bun i @vuito/vue
+    ```
+    ```bash [Yarn]
+    yarn add @vuito/vue
+    ```
+    ```bash [PNPM]
+    pnpm i @vuito/vue
+    ```
+  ::
 
 ## Usage
 
-Using the template defined in [Setup](/setup).
+Using the template defined [here](/introduction/templates#define-a-template).
 
-```html [pages/signin.vue]
+```vue [pages/signin.vue]
 <template>
   <span>{{ errors.username }}</span>
   <input type="text" id="username"
