--- a/docs/content/2.api/1.validators.md
+++ b/docs/content/2.api/1.validators.md
@@ -1,13 +1,12 @@
----
-title: Validators
-description: ''
-position: 21
-category: API Reference
----
+# Validators
 
-Vuito implements some basic validators, to speed up your development.
+Discover every validators included with vuito to speed up your development.
 
-This package is 100% tree-shakeable so you if you don't use thems, they will not take space.
+::alert{type="info"}
+💡 Remember, vuito is tree-shakeable. So each validators can be loaded independantly.
+::
+
+## How to import
 
 ```js
 import { regex, required } from 'vuito';
