[FIX] broken link in docs

--- a/docs/content/0.index.md
+++ b/docs/content/0.index.md
@@ -31,7 +31,7 @@ Simple, lightweight, isomorphic, template-based validation library.
   - **Template based**, share validations across projects with ease
   - **Isomorphic**; Server or Client-Side, it doesn't matter
   - No dependencies!
-  - Easy to [Extend and Configure](/api)
+  - Easy to [Extend and Configure](/introduction/validators)
   - Plug and play [Vue.js Mixin](/introduction/vue-mixin)
   ::
 
