6 changes by Nuxt Studio

--- a/docs/content/2.api/1.validators.md
+++ b/docs/content/2.api/1.validators.md
@@ -16,80 +16,86 @@ const { regex, required } = require('vuito');
 const regex = require('vuito/validators/regex.cjs');
 ```
 
-## `required` 
+## `required`
 
 > Check if the input value is truthy.
 
 **Usage:**
+
 ```js
 { test: required, message: "Can't be empty." }
 ```
 
-## `minLength` 
+## `minLength`
 
 > Check if string/array length is at least `n` long.
 
 **Usage:**
+
 ```js
 { test: minLength(5), message: 'Should be at least 5 long.' }
 ```
 
-## `maxLength` 
+## `maxLength`
 
 > Check if string/array length is at most `n` long.
 
 **Usage:**
+
 ```js
 { test: maxLength(5), message: 'Should be at most 5 long.' }
 ```
 
-## `minValue` 
+## `minValue`
 
 > Check if string/number value is `>= n`.
 
 **Usage:**
+
 ```js
 { test: minValue(5), message: 'Should be less or equal to 5.' }
 ```
 
-## `maxValue` 
+## `maxValue`
 
 > Check if string/number value is `<= n`.
 
 **Usage:**
+
 ```js
 { test: maxValue(5), message: 'Should be more or equal to 5.' }
 ```
 
-## `minValue` 
+## `minValue`
 
 > Check if string/number value is `>= n`.
 
 **Usage:**
+
 ```js
 { test: minValue(5), message: 'Should be less or equal to 5.' }
 ```
 
-## `onlyText` 
+## `onlyText`
 
 > Check if string input contains only alphanumeric chars or white spaces.
 
-<alert type="info">
-
+::alert{type="info"}
 Handle diactirics removal.
-
-</alert>
+::
 
 **Usage:**
+
 ```js
 { test: onlyText, message: 'Should be more or equal to 5.' }
 ```
 
-## `regex` 
+## `regex`
 
 > Check if string input match the given regex.
 
 **Usage:**
+
 ```js
 { test: regex(/^ac?b$/i), message: 'Should be "ab" or "acb".' }
 ```
