--- a/docs/content/1.introduction/1.getting-started.md
+++ b/docs/content/1.introduction/1.getting-started.md
@@ -5,64 +5,64 @@
 Install `vuito` in your project
 
 ::code-group
+```bash [NPM]
+npm i vuito
+```
 
-  ```bash [NPM]
-  npm i vuito
-  ```
+```bash [Bun]
+bun i vuito
+```
 
-  ```bash [Bun]
-  bun i vuito
-  ```
+```bash [Yarn]
+yarn add vuito
+```
 
-  ```bash [Yarn]
-  yarn add vuito
-  ```
-
-  ```bash [PNPM]
-  pnpm i vuito
-  ```
-
+```bash [PNPM]
+pnpm i vuito
+```
 ::
 
 ## Validate stuff
 
 1. Create your template, `validations/auth.ts` here.
 
-  ```typescript [validations/auth.ts]
-  import { templateify, required, minLength, maxLength } from 'vuito';
+```ts [validations/auth.ts]
+import { templateify, required, minLength, maxLength } from 'vuito';
 
-  export const signIn = templateify({
-    username: [
-      { test: required, message: 'Please enter a username.' },
-      { test: minLength(3), message: 'Username is too short.' },
-      { test: maxLength(20), message: 'Username is too big.' },
-    ],
-    password: [
-      { test: required, message: 'Please enter a password.' },
-      { test: minLength(12), message: 'Password is too short.' },
-    ],
-  });
-  ```
+export const signIn = templateify({
+  username: [
+    { test: required, message: 'Please enter a username.' },
+    { test: minLength(3), message: 'Username is too short.' },
+    { test: maxLength(20), message: 'Username is too big.' },
+  ],
+  password: [
+    { test: required, message: 'Please enter a password.' },
+    { test: minLength(12), message: 'Password is too short.' },
+  ],
+});
+```
 
 2. Validate some data
-  ```typescript [main.ts]
-  import { signIn } from './validations/auth';
 
-  const fields = {
-    username: 'jeff',
-    password: '2-pesos',
-  };
+```ts [main.ts]
+import { signIn } from './validations/auth';
 
-  await signIn.check(fields)
-    .then(() => console.log('Validated!'))
-    .catch(console.error);
-  ```
+const fields = {
+  username: 'jeff',
+  password: '2-pesos',
+};
+
+await signIn.check(fields)
+  .then(() => console.log('Validated!'))
+  .catch(console.error);
+```
 
 3. Run the test
-  ```bash
-  bun run main.ts
-  # Will return: "Password is too short."
-  ```
+
+```bash
+bun run main.ts
+# Will return: "Password is too short."
+```
 
 ::alert{type="success"}
 ✨ Well done! I'm pretty sure you're already familiar with vuito now!
