--- a/docs/content/1.introduction/2.templates.md
+++ b/docs/content/1.introduction/2.templates.md
@@ -9,16 +9,15 @@ the needed checks for the `username` and `password` fields.
 Using templates allows you to check a whole form in just one line.
 Simply regroup your forms data in an object to match the template structure, and run `signin.check(formObj)`.
 
-
 ## Define a template
 
 ::alert{type="info"}
-  A good practice is to create a new directory/repository to store all your validation templates. [Learn why.](/introduction/share-templates)
+A good practice is to create a new directory/repository to store all your validation templates. [Learn why.](/introduction/share-templates)
 ::
 
 Here we use `~/validations/`.
 
-```typescript [~/validations/auth.ts]
+```ts [~/validations/auth.ts]
 import { templateify, required, minLength, maxLength } from 'vuito';
 
 export const signin = templateify({
@@ -36,7 +35,7 @@ export const signin = templateify({
 
 ## Use a template
 
-```typescript [~/app.ts]
+```ts [~/app.ts]
 import { signin } from '~/validations/auth.js';
 
 const formData = {
